# job-sorter

./: .gitignore  README.md  TODO.md  setup.cfg  todo.md
gig_parse/: main.py  server.py  train.py  upwork.py  utils.py
job_sort/: discord_bot.py  main.py  server.py  train.py  upwork.py  utils.py
